crates/toml_edit/tests/fixtures/invalid/string-no-quotes-in-table.stderr
TOML parse error at line 1, column 7
  |
1 | value=ZZZ
  |       ^
Invalid string
Expected `"`, `'`
